--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             padding: 0 40px;
         }
 
-        /* Header & Navigation */
         header {
             background: var(--primary);
             color: white;
@@ -55,7 +54,6 @@
 
         nav a:hover { color: var(--accent); }
 
-        /* About Section with Image */
         .about-grid {
             display: grid;
             grid-template-columns: 1fr 2fr;
@@ -65,11 +63,10 @@
 
         .profile-img {
             width: 100%;
-            border-radius: 8px; /* Clean, corporate rounded corners */
+            border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
-        /* Sections */
         section { padding: 80px 0; border-bottom: 1px solid #eee; }
         h2 { color: var(--primary); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 30px; }
 
@@ -81,6 +78,16 @@
         }
 
         .project-card h3 { margin-top: 0; color: var(--secondary); }
+        
+        .project-link {
+            display: inline-block;
+            margin-top: 10px;
+            color: var(--accent);
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .project-link:hover { text-decoration: underline; }
 
         .btn {
             display: inline-block;
@@ -99,7 +106,6 @@
             color: #777;
         }
 
-        /* Responsive adjustment for mobile */
         @media (max-width: 768px) {
             .about-grid { grid-template-columns: 1fr; text-align: center; }
             .profile-img { max-width: 300px; margin-bottom: 20px; }
@@ -109,14 +115,14 @@
 <body>
 
 <header>
-    <h1>Caleb Jae Ballif</h1>
+    <h1>Caleb Ballif</h1>
     <p>Master of Accountancy Student | Utah Valley University</p>
 </header>
 
 <nav>
     <div class="container" style="text-align: center;">
         <a href="#about">About</a>
-        <a href="#projects">Projects & Audit</a>
+        <a href="#projects">Excel & Audit Projects</a>
         <a href="#resume">Resume</a>
         <a href="#contact">Contact</a>
     </div>
@@ -127,42 +133,44 @@
         <img src="folder/DSC05946.JPG" alt="Caleb Ballif" class="profile-img">
         <div>
             <h2>About Me</h2>
-            <p>I am currently a Master of Accountancy student at Utah Valley University, specializing in audit and professional accounting practices. My academic background is complemented by professional experience managing corporate events at Club Pickleball USA.</p>
-            <p>Based in Lehi, Utah, I am passionate about the intersection of financial integrity and technical innovation. I focus on modern audit methodologies, including data-driven risk assessment and emerging standards in cryptocurrency and ESG reporting.</p>
+            <p>I am a Master of Accountancy student at Utah Valley University, currently focusing on audit and professional accounting practices. My academic pursuits are grounded in practical application, particularly in developing data-driven solutions for financial analysis.</p>
+            <p>Residing in Lehi, Utah, I balance my graduate studies with professional responsibilities at Club Pickleball USA, where I manage corporate events and tournaments.</p>
         </div>
     </div>
 </section>
 
 <section id="projects" class="container">
-    <h2>Projects & Audit Work</h2>
+    <h2>Excel & Data Projects</h2>
     
     <div class="project-card">
         <h3>Fraud Detection via VBA Automation</h3>
-        <p>I developed custom VBA macros in Excel to systematically analyze journal entry datasets for audit red flags. This project streamlines the identification of irregular patterns, such as rounded-dollar entries or unusual posting times.</p>
+        <p>This project involved creating a custom VBA macro suite to analyze journal entry datasets. The tool identifies audit red flags, such as unusual posting times or specific transaction patterns, to enhance risk assessment efficiency.</p>
+        <a href="Fraud_Detection_Tool.xlsm" class="project-link">View Excel Project →</a>
     </div>
 
     <div class="project-card">
         <h3>Graduate Program Comparative Analysis</h3>
-        <p>I completed a comprehensive report analyzing Master of Accountancy program survey data, using comparative metrics to evaluate student outcomes and program performance.</p>
+        <p>An analytical report utilizing Excel to compare survey data from Master of Accountancy programs. This project showcases data visualization and statistical interpretation of student outcomes.</p>
+        <a href="Comparative_Analysis.xlsx" class="project-link">View Analysis File →</a>
     </div>
 </section>
 
 <section id="resume" class="container">
     <h2>Resume</h2>
-    <p>My professional background includes proficiency in Excel, VBA, and audit analytics. I am currently preparing for advanced coursework and internships in the assurance field.</p>
-    <a href="#" class="btn">View Full Resume (PDF)</a>
+    <p>Proficient in financial auditing, VBA macro development, and corporate event management.</p>
+    <a href="Caleb_Ballif_Resume.pdf" class="btn">Download Resume (PDF)</a>
 </section>
 
 <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>I am open to professional inquiries and networking opportunities within the accounting and audit industries.</p>
+    <p>Open to discussions regarding audit, assurance, or professional accounting opportunities.</p>
     <p><strong>Location:</strong> Lehi, Utah</p>
     <p><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/calebballif</a></p>
 </section>
 
 <footer>
     <div class="container">
-        &copy; 2026 Caleb Jae Ballif.
+        &copy; 2026 Caleb Ballif.
     </div>
 </footer>
 
