--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
 <section id="about" class="container">
     <div class="about-grid">
-        <img src="folder/DSC05946.JPG" alt="Caleb Ballif" class="profile-img">
+        <img src="folder/DSC05946.JPG" alt="Caleb Ballif Profile" class="profile-img">
         <div>
             <h2>About Me</h2>
-            <p>I am a Master of Accountancy student at Utah Valley University, currently focusing on audit and professional accounting practices. My academic pursuits are grounded in practical application, particularly in developing data-driven solutions for financial analysis.</p>
-            <p>Residing in Lehi, Utah, I balance my graduate studies with professional responsibilities at Club Pickleball USA, where I manage corporate events and tournaments.</p>
+            <p>I am a Master of Accountancy student at Utah Valley University. My academic background is currently focused on audit and professional accounting practices, with a specific interest in leveraging data analytics for financial integrity.</p>
+            <p>I reside in Lehi, Utah, and currently work at Club Pickleball USA, where I oversee corporate events and tournaments.</p>
         </div>
     </div>
 </section>
@@ -144,26 +144,25 @@
     
     <div class="project-card">
         <h3>Fraud Detection via VBA Automation</h3>
-        <p>This project involved creating a custom VBA macro suite to analyze journal entry datasets. The tool identifies audit red flags, such as unusual posting times or specific transaction patterns, to enhance risk assessment efficiency.</p>
-        <a href="Fraud_Detection_Tool.xlsm" class="project-link">View Excel Project →</a>
-    </div>
+        <p>This project involved developing a custom VBA macro suite in Excel to analyze journal entry datasets for audit red flags, streamlining preliminary risk assessments.</p>
+        </div>
 
     <div class="project-card">
-        <h3>Graduate Program Comparative Analysis</h3>
-        <p>An analytical report utilizing Excel to compare survey data from Master of Accountancy programs. This project showcases data visualization and statistical interpretation of student outcomes.</p>
-        <a href="Comparative_Analysis.xlsx" class="project-link">View Analysis File →</a>
+        <h3>Excel Dashboard Project</h3>
+        <p>A comprehensive data visualization dashboard created in Excel to interpret complex datasets and present key performance indicators effectively.</p>
+        <a href="folder/Purple%20Dashboard%20-%20Ballif,%20Caleb.xlsx" class="project-link">Download Excel Dashboard →</a>
     </div>
 </section>
 
 <section id="resume" class="container">
     <h2>Resume</h2>
-    <p>Proficient in financial auditing, VBA macro development, and corporate event management.</p>
-    <a href="Caleb_Ballif_Resume.pdf" class="btn">Download Resume (PDF)</a>
+    <p>My professional experience spans from corporate event management to advanced graduate-level accounting coursework.</p>
+    <a href="folder/Caleb.Ballif.Resume%202025.pdf" class="btn">Download Resume (PDF)</a>
 </section>
 
 <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Open to discussions regarding audit, assurance, or professional accounting opportunities.</p>
+    <p>I am open to professional inquiries regarding audit, assurance, or financial analysis roles.</p>
     <p><strong>Location:</strong> Lehi, Utah</p>
     <p><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/calebballif</a></p>
 </section>
